--- a/src/styles.css
+++ b/src/styles.css
@@ -1,11 +1,20 @@
+:root {
+    --main-font: 'Press Start 2P', cursive;
+    --first-color: rgb(53, 100, 173);
+    --second-color: rgb(255, 203, 5);
+    --bg-color: #000;
+}
+
+
 * {
     margin: 0;
     padding: 0;
-    
+
 }
 
 body {
-    background-color: #000;
+    background-color: var(--bg-color);
+    font-family: var(--main-font);
 }
 
 .card-body {
@@ -36,8 +45,7 @@ body {
 
 .primary h1 {
     margin-bottom: 20px;
-    font-family: 'Press Start 2P', cursive;
-    color: rgb(53, 100, 173)
+    color: var(--first-color);
 }
 
 .stats {
@@ -46,9 +54,8 @@ body {
 
 .stats h1 {
     padding: 1px;
-    font-family: 'Press Start 2P', cursive;
     margin: 10px;
-    color: rgb(255, 203, 5)
+    color: var(--second-color);
 }
 
 .secondary {
@@ -58,6 +65,28 @@ body {
 .secondary h3 {
     padding: 1px;
     margin: 10px;
-    font-family: 'Press Start 2P', cursive;
-    color: rgb(255, 203, 5)
+   
+    color:var(--second-color);
 }
+
+.container-buttons ul{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.container-buttons li {
+    margin: 70px;
+}
+
+.container-buttons a {
+    color:var(--second-color);
+    background:var(--first-color);
+    padding: 20px;
+    border-radius: 30px;
+    text-decoration: none;
+    text-align: center;  
+}
+
+
